--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-jss": "^10.9.2",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
@@ -22,5 +23,4 @@
     "sweetalert2": "^11.6.15",
     "web-vitals": "^2.1.4"
   }
-  
 }
