--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
