--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-jss": "^10.9.2",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "sass": "^1.57.1",
     "sweetalert2": "^11.6.15",
     "web-vitals": "^2.1.4"
