--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
     "@tippyjs/react": "^4.2.6",
     "antd": "^5.0.7",
     "axios": "^1.2.1",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "express-json": "^1.0.0",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.21",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
